:bug: Fix second level menu spacing on doc pages

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1007,8 +1007,6 @@ ul.socialNetwork li {
 .bd-toc ul {
     padding-left: 0;
     margin-left: 0.2em;
-    padding-bottom: 0.2em !important;
-    padding-bottom: 0.2em !important;
     list-style: none;
     font-size: 0.9rem;
     line-height: 1.6;
